fixing the collapse issue

--- a/src/App.css
+++ b/src/App.css
@@ -295,7 +295,7 @@ height:350px;
 
 .report-con{
   flex:1;
-    max-width:850px;
+    max-width:750px;
   overflow: hidden; 
   box-sizing:border-box;
     border-radius:24px;
